--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  geolocator: ^8.2.0
+  geocoding: ^2.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
